<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:id="@+id/txtname"
            android:text="@string/tname"
            android:textColor="@color/tcolor"
            android:textSize="@dimen/t_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    />
    <ImageView
            android:id="@+id/location_img"
            android:src="@drawable/ic_location"
            android:layout_marginLeft="30dp"
            app:layout_constraintTop_toBottomOf="@+id/txtname"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="5dp"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
    <TextView
            android:id="@+id/txtlocation"
            android:textSize="@dimen/t_size"
            android:text="@string/tlocation"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/txtname"
            app:layout_constraintLeft_toRightOf="@+id/location_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/followbtn"
            android:text="@string/follow"
            android:textSize="@dimen/follow_size"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_btn"
            app:layout_constraintTop_toBottomOf="@+id/location_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="@+id/txtname"

    />
    <ImageView
            android:id="@+id/profile"
            android:src="@drawable/mtk"
            android:layout_width="160dp"
               android:layout_height="180dp"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/roundedimg"
            app:layout_constraintBaseline_toBaselineOf="@+id/followbtn"
    />

    <TextView
            android:id="@+id/txt134"
            android:text="@string/po"
            android:textSize="@dimen/psize"
            app:layout_constraintTop_toBottomOf="@+id/followbtn"
            app:layout_constraintLeft_toLeftOf="@+id/location_img"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
              android:layout_height="wrap_content"
    />
    <TextView
            android:id="@+id/txt1256"
            android:text="@string/f"
            android:textSize="@dimen/follow_size"
            app:layout_constraintTop_toBottomOf="@+id/followbtn"
            app:layout_constraintLeft_toLeftOf="@+id/txt134"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    />
    <TextView
            android:id="@+id/posts"
            android:text="@string/posts"
            android:textSize="@dimen/psize"
            app:layout_constraintLeft_toLeftOf="@+id/txt134"
            app:layout_constraintTop_toBottomOf="@+id/txt134"
            android:layout_width="wrap_content"
              android:layout_height="wrap_content"
    />
    <TextView
            android:id="@+id/follow"
            android:text="@string/follower"
            android:textSize="@dimen/fsize"
            app:layout_constraintLeft_toLeftOf="@+id/posts"
            app:layout_constraintTop_toBottomOf="@+id/txt1256"
            android:layout_marginLeft="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    />
    <ImageView
            android:id="@+id/img1"
            android:src="@drawable/baby"
            app:layout_constraintLeft_toLeftOf="@+id/txtname"
            app:layout_constraintTop_toBottomOf="@+id/posts"
            android:layout_marginTop="30dp"
            android:layout_width="80dp"
               android:layout_height="100dp"
            app:layout_constraintHorizontal_chainStyle="packed"
    />
    <ImageView
            android:id="@+id/img2"
            android:src="@drawable/color"
            app:layout_constraintLeft_toRightOf="@+id/img1"
           app:layout_constraintTop_toBottomOf="@+id/posts"
            android:layout_marginTop="30dp"
            android:layout_width="80dp"
            android:layout_height="100dp"

    />
    <ImageView
            android:id="@+id/img3"
            android:src="@drawable/cookie"
            app:layout_constraintLeft_toRightOf="@+id/img2"
            app:layout_constraintTop_toBottomOf="@+id/posts"
            android:layout_marginTop="30dp"
            android:layout_width="80dp"
            android:layout_height="100dp"/>
    <ImageView
            android:id="@+id/img4"
            android:src="@drawable/cuteangle"
            app:layout_constraintLeft_toRightOf="@+id/img3"
            app:layout_constraintTop_toBottomOf="@+id/posts"
            android:layout_marginTop="30dp"
            android:layout_width="80dp"
            android:layout_height="100dp"/>
    <ImageView
            android:id="@+id/img5"
            android:src="@drawable/tattoo"
            app:layout_constraintLeft_toRightOf="@+id/img4"
            app:layout_constraintTop_toBottomOf="@+id/posts"
            android:layout_marginTop="30dp"
            android:layout_width="80dp"
            android:layout_height="100dp"
    />
    <ImageView
            android:id="@+id/linkin"
            android:src="@drawable/ic_linkedin"
            android:layout_marginLeft="9dp"
            app:layout_constraintTop_toBottomOf="@+id/img1"
            app:layout_constraintLeft_toLeftOf="@+id/posts"
            android:layout_marginTop="10dp"
            android:layout_width="50dp"
            android:layout_height="30dp"
            app:layout_constraintHorizontal_chainStyle="spread"
    />
    <ImageView
            android:id="@+id/facebook"
            android:src="@drawable/ic_icons8_facebook"
            android:layout_marginLeft="9dp"
            app:layout_constraintTop_toBottomOf="@+id/img2"
            app:layout_constraintLeft_toRightOf="@+id/linkin"
            android:layout_marginTop="10dp"
            android:layout_width="50dp"
            android:layout_height="30dp"

    />
    <ImageView
            android:id="@+id/youtube"
            android:src="@drawable/ic_icons8_youtube"
            android:layout_marginLeft="9dp"
            app:layout_constraintTop_toBottomOf="@+id/img3"
            app:layout_constraintLeft_toRightOf="@+id/facebook"
            android:layout_marginTop="10dp"
            android:layout_width="50dp"
            android:layout_height="30dp"

    />
    <ImageView
            android:id="@+id/behance"
            android:src="@drawable/ic_icons8_behance"
            android:layout_marginLeft="9dp"
            app:layout_constraintTop_toBottomOf="@+id/img4"
            app:layout_constraintLeft_toRightOf="@+id/youtube"
            android:layout_marginTop="10dp"
            android:layout_width="50dp"
            android:layout_height="30dp"

    />
    <ImageView
            android:id="@+id/twitter"
            android:src="@drawable/ic_icons8_twitter"
            android:layout_marginLeft="22dp"
            app:layout_constraintTop_toBottomOf="@+id/img5"
            app:layout_constraintLeft_toRightOf="@+id/behance"
            android:layout_marginTop="10dp"
            android:layout_width="50dp"
            android:layout_height="30dp"

    />
    <ImageView
            android:id="@+id/line"
            app:layout_constraintTop_toBottomOf="@+id/linkin"
            android:scaleType="fitXY"
            android:background="@drawable/roundedline"
            app:layout_constraintLeft_toLeftOf="@id/img1"
            android:layout_marginTop="30dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/about"
            android:textSize="30sp"
            android:text="About"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintLeft_toLeftOf="@+id/txtname"
            app:layout_constraintTop_toBottomOf="@+id/line"
            android:layout_width="wrap_content"
              android:layout_height="wrap_content"
    />
    <TextView
            android:id="@+id/conclusion"
            android:text="@string/con"
            android:textSize="@dimen/csize"
            app:layout_constraintLeft_toLeftOf="@+id/txtname"
            app:layout_constraintTop_toBottomOf="@+id/about"
            android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>